[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formbridge-sdk"
version = "0.1.0"
description = "Python SDK for FormBridge — async and sync HTTP client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "FormBridge Team" }]
keywords = ["formbridge", "sdk", "forms", "submissions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.21", "ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/formbridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
